--- a/index.html
+++ b/index.html
@@ -69,4 +69,10 @@
             </p>
         </article>
     </aside>
+    <footer class="footer">
+        <h2>Made with ❤️️ by Horiseon</h2>
+        <p>
+            &copy; 2023 Horiseon Social Solution Services, Inc.
+        </p>
+    </footer>
 </body>
